--- a/Universidad/Universidad/Pages/Shared/_Layout.cshtml
+++ b/Universidad/Universidad/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Carreras/Index">Carreras</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-page="/Materias/Index">Materias</a>
+                        </li>
                     </ul>
                 </div>
             </div>
