--- a/Universidad/Universidad/Pages/Shared/_Layout.cshtml
+++ b/Universidad/Universidad/Pages/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item"></li>
                             <a class="nav-link text-dark" asp-page="/Materias/Index">Materias</a>
                         </li>
+                        <li class="nav-item"></li>
+                            <a class="nav-link text-dark" asp-page="/Grupos/Index">Grupos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
