--- a/Universidad/Universidad/Pages/Shared/_Layout.cshtml
+++ b/Universidad/Universidad/Pages/Shared/_Layout.cshtml
@@ -28,11 +28,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Carreras/Index">Carreras</a>
                         </li>
-                        <li class="nav-item"></li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Materias/Index">Materias</a>
                         </li>
-                        <li class="nav-item"></li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Grupos/Index">Grupos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Matriculas/Index">Matricula en línea</a>
                         </li>
                     </ul>
                 </div>
