--- a/Universidad/Universidad/Pages/Index.cshtml
+++ b/Universidad/Universidad/Pages/Index.cshtml
@@ -4,4 +4,58 @@
     ViewData["Title"] = "Inicio";
 }
 
-<h1>Bienvenido a la Universidad Chinchilla</h1>
+<h2 class="titulo text-center my-4">BIENVENIDOS A LA UNIVERSIDAD CHINCHILLA</h2>
+
+<div class="container my-5">
+    <div id="theCarousel" class="carousel slide" data-bs-ride="carousel">
+        <!-- Indicadores -->
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#theCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#theCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#theCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#theCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+        </div>
+
+        <!-- Contenido del carrusel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://images.unsplash.com/photo-1562774053-701939374585?q=80&w=1486&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" class="d-block w-100" alt="Ilustración">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Universidad Chinchilla</h3>
+                    <p>Exposición</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://institutocarlrogersvillahermosa.com/wp-content/uploads/2022/04/entrar-a-la-universidad.jpg" class="d-block w-100" alt="Matricula">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Matrícula</h3>
+                    <p>Matricula 100% virtual</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://www.vitastudent.com/wp-content/uploads/2023/01/VITA_LEWISHAM_NOV2021_354_RET-scaled.jpg" class="d-block w-100" alt="Instalaciones">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Instalaciones</h3>
+                    <p>Disfruta de nuestras instalaciones</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://usil-blog.s3.amazonaws.com/PROD/blog/image/estudiar-universidad-acreditada.jpg" class="d-block w-100" alt="Ingenieria">
+                <div class="carousel-caption d-none d-md-block">
+                    <h3>Número 1 en Ingeniería</h3>
+                    <p>Carreras</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Controles -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#theCarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Anterior</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#theCarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Siguiente</span>
+        </button>
+    </div>
+</div>
